@@ -30,29 +30,34 @@ import co.kirikiri.domain.roadmap.RoadmapContent;
 import co.kirikiri.domain.roadmap.RoadmapDifficulty;
 import co.kirikiri.domain.roadmap.RoadmapNode;
 import co.kirikiri.domain.roadmap.RoadmapNodes;
+import co.kirikiri.domain.roadmap.RoadmapReview;
 import co.kirikiri.domain.roadmap.RoadmapTag;
 import co.kirikiri.domain.roadmap.RoadmapTags;
 import co.kirikiri.domain.roadmap.vo.RoadmapTagName;
 import co.kirikiri.exception.NotFoundException;
-import co.kirikiri.persistence.dto.GoalRoomLastValueDto;
 import co.kirikiri.persistence.goalroom.GoalRoomRepository;
 import co.kirikiri.persistence.goalroom.dto.RoadmapGoalRoomsFilterType;
 import co.kirikiri.persistence.member.MemberRepository;
 import co.kirikiri.persistence.roadmap.RoadmapCategoryRepository;
 import co.kirikiri.persistence.roadmap.RoadmapContentRepository;
 import co.kirikiri.persistence.roadmap.RoadmapRepository;
+import co.kirikiri.persistence.roadmap.RoadmapReviewRepository;
 import co.kirikiri.service.dto.CustomScrollRequest;
 import co.kirikiri.service.dto.member.response.MemberResponse;
 import co.kirikiri.service.dto.roadmap.RoadmapGoalRoomsFilterTypeDto;
 import co.kirikiri.service.dto.roadmap.request.RoadmapFilterTypeRequest;
 import co.kirikiri.service.dto.roadmap.request.RoadmapSearchRequest;
 import co.kirikiri.service.dto.roadmap.response.MemberRoadmapResponse;
+import co.kirikiri.service.dto.roadmap.response.MemberRoadmapResponses;
 import co.kirikiri.service.dto.roadmap.response.RoadmapCategoryResponse;
 import co.kirikiri.service.dto.roadmap.response.RoadmapContentResponse;
 import co.kirikiri.service.dto.roadmap.response.RoadmapForListResponse;
+import co.kirikiri.service.dto.roadmap.response.RoadmapForListResponses;
 import co.kirikiri.service.dto.roadmap.response.RoadmapGoalRoomResponse;
+import co.kirikiri.service.dto.roadmap.response.RoadmapGoalRoomResponses;
 import co.kirikiri.service.dto.roadmap.response.RoadmapNodeResponse;
 import co.kirikiri.service.dto.roadmap.response.RoadmapResponse;
+import co.kirikiri.service.dto.roadmap.response.RoadmapReviewResponse;
 import co.kirikiri.service.dto.roadmap.response.RoadmapTagResponse;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
@@ -72,7 +77,7 @@ class RoadmapReadServiceTest {
 
     private final Member member = new Member(1L, new Identifier("identifier1"),
             new EncryptedPassword(new Password("password1!")), new Nickname("닉네임"),
-            new MemberImage("프로필 이미지", "default-member-image", ImageContentType.JPEG),
+            new MemberImage("originalFileName", "default-member-image", ImageContentType.JPG),
             new MemberProfile(Gender.FEMALE, LocalDate.of(1999, 6, 8), "010-1234-5678"));
     private final LocalDateTime now = LocalDateTime.now();
 
@@ -91,12 +96,16 @@ class RoadmapReadServiceTest {
     @Mock
     private MemberRepository memberRepository;
 
+    @Mock
+    private RoadmapReviewRepository roadmapReviewRepository;
+
     @InjectMocks
     private RoadmapReadService roadmapService;
 
     @Test
     void 특정_아이디를_가지는_로드맵_단일_조회시_해당_로드맵의_정보를_반환한다() {
         //given
+        final Member member = 사용자를_생성한다(1L, "identifier1", "코끼리");
         final RoadmapCategory category = 로드맵_카테고리를_생성한다(1L, "운동");
         final RoadmapContent content = 로드맵_컨텐츠를_생성한다(1L, "콘텐츠 내용");
         final Roadmap roadmap = 로드맵을_생성한다("로드맵 제목", category);
@@ -119,13 +128,10 @@ class RoadmapReadServiceTest {
         final RoadmapResponse expectedResponse = new RoadmapResponse(
                 roadmapId, new RoadmapCategoryResponse(1L, "운동"), "로드맵 제목", "로드맵 소개글",
                 new MemberResponse(1L, "닉네임", "default-member-image"),
-                new RoadmapContentResponse(1L, "로드맵 본문",
-                        List.of(
-                                new RoadmapNodeResponse(1L, "로드맵 노드1 제목", "로드맵 노드1 설명", Collections.emptyList())
-                        )),
-                "DIFFICULT", 30, now,
-                List.of(
-                        new RoadmapTagResponse(1L, "태그1"),
+                new RoadmapContentResponse(1L, "로드맵 본문", List.of(
+                        new RoadmapNodeResponse(1L, "로드맵 노드1 제목", "로드맵 노드1 설명", Collections.emptyList())
+                )), "DIFFICULT", 30, now,
+                List.of(new RoadmapTagResponse(1L, "태그1"),
                         new RoadmapTagResponse(2L, "태그2")),
                 2L, 2L, 2L
         );
@@ -155,7 +161,7 @@ class RoadmapReadServiceTest {
 
         final Long categoryId = 1L;
         final RoadmapFilterTypeRequest filterType = RoadmapFilterTypeRequest.LATEST;
-        final CustomScrollRequest scrollRequest = new CustomScrollRequest(null, null, null, null, 10);
+        final CustomScrollRequest scrollRequest = new CustomScrollRequest(null, 10);
 
         // expected
         assertThatThrownBy(() -> roadmapService.findRoadmapsByFilterType(categoryId, filterType, scrollRequest))
@@ -177,60 +183,15 @@ class RoadmapReadServiceTest {
 
         final Long categoryId = 1L;
         final RoadmapFilterTypeRequest filterType = null;
-        final CustomScrollRequest scrollRequest = new CustomScrollRequest(null, null, null, null, 10);
+        final CustomScrollRequest scrollRequest = new CustomScrollRequest(null, 10);
 
         // when
-        final List<RoadmapForListResponse> roadmapResponses = roadmapService.findRoadmapsByFilterType(
+        final RoadmapForListResponses roadmapResponses = roadmapService.findRoadmapsByFilterType(
                 categoryId, filterType, scrollRequest);
 
         // then
-        final RoadmapForListResponse firstRoadmapResponse = new RoadmapForListResponse(
-                1L, "첫 번째 로드맵", "로드맵 소개글", "DIFFICULT", 30, LocalDateTime.now(),
-                new MemberResponse(1L, "닉네임", "default-member-image"),
-                new RoadmapCategoryResponse(1, "여행"),
-                List.of(
-                        new RoadmapTagResponse(1L, "태그1"),
-                        new RoadmapTagResponse(2L, "태그2")));
-
-        final RoadmapForListResponse secondRoadmapResponse = new RoadmapForListResponse(
-                1L, "두 번째 로드맵", "로드맵 소개글", "DIFFICULT", 30,
-                LocalDateTime.now(),
-                new MemberResponse(1L, "닉네임", "default-member-image"),
-                new RoadmapCategoryResponse(1, "여행"),
-                List.of(
-                        new RoadmapTagResponse(1L, "태그1"),
-                        new RoadmapTagResponse(2L, "태그2")));
-
-        final List<RoadmapForListResponse> expected = List.of(firstRoadmapResponse, secondRoadmapResponse);
-
-        assertThat(roadmapResponses)
-                .usingRecursiveComparison()
-                .ignoringFields("createdAt")
-                .isEqualTo(expected);
-    }
-
-    @Test
-    void 로드맵_목록_조회_시_카테고리_조건이_null이면_전체_카테고리를_대상으로_최신순으로_조회한다() {
-        // given
-        final RoadmapCategory category = new RoadmapCategory(1L, "여행");
-        final List<Roadmap> roadmaps = List.of(
-                로드맵을_생성한다("첫 번째 로드맵", category),
-                로드맵을_생성한다("두 번째 로드맵", category));
-
-        when(roadmapRepository.findRoadmapsByCategory(any(), any(), any(), anyInt()))
-                .thenReturn(roadmaps);
-
-        final Long categoryId = null;
-        final RoadmapFilterTypeRequest filterType = RoadmapFilterTypeRequest.LATEST;
-        final CustomScrollRequest scrollRequest = new CustomScrollRequest(null, null, null, null, 10);
-
-        // when
-        final List<RoadmapForListResponse> roadmapResponses = roadmapService.findRoadmapsByFilterType(
-                categoryId, filterType, scrollRequest);
-
-        // then
-        final RoadmapForListResponse firstRoadmapResponse = new RoadmapForListResponse(
-                1L, "첫 번째 로드맵", "로드맵 소개글", "DIFFICULT", 30, LocalDateTime.now(),
+        final RoadmapForListResponse firstRoadmapResponse = new RoadmapForListResponse(1L, "첫 번째 로드맵", "로드맵 소개글",
+                "DIFFICULT", 30, LocalDateTime.now(),
                 new MemberResponse(1L, "닉네임", "default-member-image"),
                 new RoadmapCategoryResponse(1, "여행"),
                 List.of(
@@ -245,11 +206,94 @@ class RoadmapReadServiceTest {
                         new RoadmapTagResponse(1L, "태그1"),
                         new RoadmapTagResponse(2L, "태그2")));
 
-        final List<RoadmapForListResponse> expected = List.of(firstRoadmapResponse, secondRoadmapResponse);
+        final List<RoadmapForListResponse> responses = List.of(firstRoadmapResponse, secondRoadmapResponse);
+        final RoadmapForListResponses expected = new RoadmapForListResponses(responses, false);
 
         assertThat(roadmapResponses)
                 .usingRecursiveComparison()
-                .ignoringFields("createdAt")
+                .ignoringFields("responses.createdAt")
+                .isEqualTo(expected);
+    }
+
+    @Test
+    void 로드맵_목록_조회시_다음_요소가_존재하면_true로_반환한다() {
+        // given
+        final RoadmapCategory category = new RoadmapCategory(1L, "여행");
+        final List<Roadmap> roadmaps = List.of(
+                로드맵을_생성한다("첫 번째 로드맵", category),
+                로드맵을_생성한다("두 번째 로드맵", category));
+
+        when(roadmapCategoryRepository.findById(any()))
+                .thenReturn(Optional.of(category));
+        when(roadmapRepository.findRoadmapsByCategory(any(), any(), any(), anyInt()))
+                .thenReturn(roadmaps);
+
+        final Long categoryId = 1L;
+        final RoadmapFilterTypeRequest filterType = null;
+        final CustomScrollRequest scrollRequest = new CustomScrollRequest(null, 1);
+
+        // when
+        final RoadmapForListResponses roadmapResponses = roadmapService.findRoadmapsByFilterType(
+                categoryId, filterType, scrollRequest);
+
+        // then
+        final RoadmapForListResponse firstRoadmapResponse = new RoadmapForListResponse(
+                1L, "첫 번째 로드맵", "로드맵 소개글", "DIFFICULT", 30, LocalDateTime.now(),
+                new MemberResponse(1L, "닉네임", "default-member-image"),
+                new RoadmapCategoryResponse(1, "여행"),
+                List.of(
+                        new RoadmapTagResponse(1L, "태그1"),
+                        new RoadmapTagResponse(2L, "태그2")));
+
+        final List<RoadmapForListResponse> responses = List.of(firstRoadmapResponse);
+        final RoadmapForListResponses expected = new RoadmapForListResponses(responses, true);
+
+        assertThat(roadmapResponses)
+                .usingRecursiveComparison()
+                .ignoringFields("responses.createdAt")
+                .isEqualTo(expected);
+    }
+
+    @Test
+    void 로드맵_목록_조회_시_카테고리_조건이_null이면_전체_카테고리를_대상으로_최신순으로_조회한다() {
+        // given
+        final RoadmapCategory category = new RoadmapCategory(1L, "여행");
+        final List<Roadmap> roadmaps = List.of(로드맵을_생성한다("첫 번째 로드맵", category), 로드맵을_생성한다("두 번째 로드맵", category));
+
+        when(roadmapRepository.findRoadmapsByCategory(any(), any(), any(), anyInt()))
+                .thenReturn(roadmaps);
+
+        final Long categoryId = null;
+        final RoadmapFilterTypeRequest filterType = RoadmapFilterTypeRequest.LATEST;
+        final CustomScrollRequest scrollRequest = new CustomScrollRequest(null, 10);
+
+        // when
+        final RoadmapForListResponses roadmapResponses = roadmapService.findRoadmapsByFilterType(
+                categoryId, filterType, scrollRequest);
+
+        // then
+        final RoadmapForListResponse firstRoadmapResponse = new RoadmapForListResponse(1L, "첫 번째 로드맵", "로드맵 소개글",
+                "DIFFICULT", 30, LocalDateTime.now(),
+                new MemberResponse(1L, "닉네임", "default-member-image"),
+                new RoadmapCategoryResponse(1, "여행"),
+                List.of(
+                        new RoadmapTagResponse(1L, "태그1"),
+                        new RoadmapTagResponse(2L, "태그2")));
+
+        final RoadmapForListResponse secondRoadmapResponse = new RoadmapForListResponse(1L, "두 번째 로드맵", "로드맵 소개글",
+                "DIFFICULT", 30, LocalDateTime.now(),
+                new MemberResponse(1L, "닉네임", "default-member-image"),
+                new RoadmapCategoryResponse(1, "여행"),
+                List.of(
+                        new RoadmapTagResponse(1L, "태그1"),
+                        new RoadmapTagResponse(2L, "태그2")));
+
+        final RoadmapForListResponses expected = new RoadmapForListResponses(
+                List.of(firstRoadmapResponse, secondRoadmapResponse), false);
+
+        assertThat(roadmapResponses)
+                .usingRecursiveComparison()
+                .ignoringFields("responses.createdAt")
                 .isEqualTo(expected);
     }
 
@@ -266,26 +310,26 @@ class RoadmapReadServiceTest {
 
         final Long categoryId = 1L;
         final RoadmapFilterTypeRequest filterType = RoadmapFilterTypeRequest.LATEST;
-        final CustomScrollRequest scrollRequest = new CustomScrollRequest(null, null, null, null, 10);
+        final CustomScrollRequest scrollRequest = new CustomScrollRequest(null, 10);
 
         // when
-        final List<RoadmapForListResponse> roadmapResponses = roadmapService.findRoadmapsByFilterType(
+        final RoadmapForListResponses roadmapResponses = roadmapService.findRoadmapsByFilterType(
                 categoryId, filterType, scrollRequest);
 
         // then
-        final RoadmapForListResponse roadmapResponse = new RoadmapForListResponse(
-                1L, "첫 번째 로드맵", "로드맵 소개글", "DIFFICULT", 30, LocalDateTime.now(),
+        final RoadmapForListResponse roadmapResponse = new RoadmapForListResponse(1L, "첫 번째 로드맵", "로드맵 소개글",
+                "DIFFICULT", 30, LocalDateTime.now(),
                 new MemberResponse(1L, "닉네임", "default-member-image"),
                 new RoadmapCategoryResponse(1, "여행"),
                 List.of(
                         new RoadmapTagResponse(1L, "태그1"),
                         new RoadmapTagResponse(2L, "태그2")));
 
-        final List<RoadmapForListResponse> expected = List.of(roadmapResponse);
+        final RoadmapForListResponses expected = new RoadmapForListResponses(List.of(roadmapResponse), false);
 
         assertThat(roadmapResponses)
                 .usingRecursiveComparison()
-                .ignoringFields("createdAt")
+                .ignoringFields("responses.createdAt")
                 .isEqualTo(expected);
     }
 
@@ -318,15 +362,15 @@ class RoadmapReadServiceTest {
 
         final RoadmapSearchRequest roadmapSearchRequest = new RoadmapSearchRequest("로드맵", null, null);
         final RoadmapFilterTypeRequest filterType = RoadmapFilterTypeRequest.LATEST;
-        final CustomScrollRequest scrollRequest = new CustomScrollRequest(null, null, null, null, 10);
+        final CustomScrollRequest scrollRequest = new CustomScrollRequest(null, 10);
 
         // when
-        final List<RoadmapForListResponse> roadmapResponses = roadmapService.search(
+        final RoadmapForListResponses roadmapResponses = roadmapService.search(
                 filterType, roadmapSearchRequest, scrollRequest);
 
         // then
-        final RoadmapForListResponse firstRoadmapResponse = new RoadmapForListResponse(
-                1L, "첫 번째 로드맵", "로드맵 소개글", "DIFFICULT", 30, LocalDateTime.now(),
+        final RoadmapForListResponse firstRoadmapResponse = new RoadmapForListResponse(1L, "첫 번째 로드맵", "로드맵 소개글",
+                "DIFFICULT", 30, LocalDateTime.now(),
                 new MemberResponse(1L, "닉네임", "default-member-image"),
                 new RoadmapCategoryResponse(1, "여행"),
                 List.of(
@@ -341,18 +385,19 @@ class RoadmapReadServiceTest {
                         new RoadmapTagResponse(1L, "태그1"),
                         new RoadmapTagResponse(2L, "태그2")));
 
-        final List<RoadmapForListResponse> expected = List.of(firstRoadmapResponse, secondRoadmapResponse);
+        final RoadmapForListResponses expected = new RoadmapForListResponses(
+                List.of(firstRoadmapResponse, secondRoadmapResponse), false);
 
         assertThat(roadmapResponses)
                 .usingRecursiveComparison()
-                .ignoringFields("createdAt")
+                .ignoringFields("responses.createdAt")
                 .isEqualTo(expected);
     }
 
     @Test
     void 사용자가_생성한_로드맵을_조회한다() {
         // given
-        final Member member = 사용자를_생성한다();
+        final Member member = 사용자를_생성한다(1L, "identifier1", "코끼리");
         final RoadmapCategory category1 = 로드맵_카테고리를_생성한다(1L, "운동");
         final RoadmapCategory category2 = 로드맵_카테고리를_생성한다(2L, "여가");
         final Roadmap roadmap1 = 로드맵을_생성한다("로드맵1", category1);
@@ -364,19 +409,19 @@ class RoadmapReadServiceTest {
                 .thenReturn(List.of(roadmap2, roadmap1));
 
         // when
-        final List<MemberRoadmapResponse> memberRoadmapResponse = roadmapService.findAllMemberRoadmaps(
-                "identifier1",
-                new CustomScrollRequest(null, null, null, null, 10));
+        final MemberRoadmapResponses memberRoadmapResponse = roadmapService.findAllMemberRoadmaps(
+                "identifier1", new CustomScrollRequest(null, 10));
 
         // then
-        final List<MemberRoadmapResponse> expected = List.of(
+        final MemberRoadmapResponses expected = new MemberRoadmapResponses(List.of(
                 new MemberRoadmapResponse(2L, "로드맵2", RoadmapDifficulty.DIFFICULT.name(), LocalDateTime.now(),
                         new RoadmapCategoryResponse(2L, "여가")),
                 new MemberRoadmapResponse(1L, "로드맵1", RoadmapDifficulty.DIFFICULT.name(), LocalDateTime.now(),
-                        new RoadmapCategoryResponse(1L, "운동")));
+                        new RoadmapCategoryResponse(1L, "운동"))), false);
 
-        assertThat(memberRoadmapResponse).usingRecursiveComparison()
-                .ignoringFields("roadmapId", "createdAt")
+        assertThat(memberRoadmapResponse)
+                .usingRecursiveComparison()
+                .ignoringFields("responses.roadmapId", "responses.createdAt")
                 .isEqualTo(expected);
     }
 
@@ -388,17 +433,15 @@ class RoadmapReadServiceTest {
 
         // when
         // then
-        assertThatThrownBy(
-                () -> roadmapService.findAllMemberRoadmaps("identifier1",
-                        new CustomScrollRequest(null, null, null, null, 10)))
-                .isInstanceOf(NotFoundException.class)
+        assertThatThrownBy(() -> roadmapService.findAllMemberRoadmaps("identifier1",
+                new CustomScrollRequest(null, 10))).isInstanceOf(NotFoundException.class)
                 .hasMessageContaining("존재하지 않는 회원입니다.");
     }
 
     @Test
     void 로드맵의_골룸_목록을_조회한다() {
         // given
-        final Member member1 = 사용자를_생성한다(1L);
+        final Member member1 = 사용자를_생성한다(1L, "identifier1", "name1");
         final RoadmapNode roadmapNode1 = new RoadmapNode("로드맵 1주차", "로드맵 1주차 내용");
         final RoadmapNode roadmapNode2 = new RoadmapNode("로드맵 2주차", "로드맵 2주차 내용");
         final RoadmapNodes roadmapNodes = new RoadmapNodes(List.of(roadmapNode1, roadmapNode2));
@@ -416,13 +459,13 @@ class RoadmapReadServiceTest {
         final GoalRoomRoadmapNode goalRoomRoadmapNode4 = new GoalRoomRoadmapNode(
                 new Period(TODAY.plusDays(11), TODAY.plusDays(20)), 1, roadmapNode2);
 
-        final Member member2 = 사용자를_생성한다(2L);
+        final Member member2 = 사용자를_생성한다(2L, "identifier2", "name2");
         final GoalRoom goalRoom1 = new GoalRoom(1L, new GoalRoomName("goalroom1"), new LimitedMemberCount(10),
                 roadmapContent, member2);
         goalRoom1.addAllGoalRoomRoadmapNodes(
                 new GoalRoomRoadmapNodes(List.of(goalRoomRoadmapNode1, goalRoomRoadmapNode2)));
 
-        final Member member3 = 사용자를_생성한다(3L);
+        final Member member3 = 사용자를_생성한다(3L, "identifier2", "name3");
         final GoalRoom goalRoom2 = new GoalRoom(2L, new GoalRoomName("goalroom2"), new LimitedMemberCount(10),
                 roadmapContent, member3);
         goalRoom2.addAllGoalRoomRoadmapNodes(
@@ -432,28 +475,27 @@ class RoadmapReadServiceTest {
         given(roadmapRepository.findRoadmapById(anyLong()))
                 .willReturn(Optional.of(roadmap));
         given(goalRoomRepository.findGoalRoomsWithPendingMembersByRoadmapAndCond(roadmap,
-                RoadmapGoalRoomsFilterType.LATEST,
-                GoalRoomLastValueDto.create(new CustomScrollRequest(null, null, null, null, 10)), 10))
+                RoadmapGoalRoomsFilterType.LATEST, null, 10))
                 .willReturn(goalRooms);
 
         // when
-        final List<RoadmapGoalRoomResponse> result = roadmapService.findRoadmapGoalRoomsByFilterType(1L,
-                RoadmapGoalRoomsFilterTypeDto.LATEST, new CustomScrollRequest(null, null, null, null, 10));
+        final RoadmapGoalRoomResponses result = roadmapService.findRoadmapGoalRoomsByFilterType(1L,
+                RoadmapGoalRoomsFilterTypeDto.LATEST, new CustomScrollRequest(null, 10));
 
-        final List<RoadmapGoalRoomResponse> expected =
-                List.of(
+        final RoadmapGoalRoomResponses expected =
+                new RoadmapGoalRoomResponses(List.of(
                         new RoadmapGoalRoomResponse(2L, "goalroom2", 1, 10, LocalDateTime.now(),
                                 TODAY, TODAY.plusDays(20),
                                 new MemberResponse(member3.getId(), member3.getNickname().getValue(),
-                                        "default-member-image")),
+                                        member3.getImage().getServerFilePath())),
                         new RoadmapGoalRoomResponse(1L, "goalroom1", 1, 10, LocalDateTime.now(),
                                 TODAY, TODAY.plusDays(20),
                                 new MemberResponse(member2.getId(), member2.getNickname().getValue(),
-                                        "default-member-image"))
-                );
+                                        member2.getImage().getServerFilePath()))), false);
 
-        assertThat(result).usingRecursiveComparison()
-                .ignoringFields("createdAt")
+        assertThat(result)
+                .usingRecursiveComparison()
+                .ignoringFields("responses.createdAt")
                 .isEqualTo(expected);
     }
 
@@ -467,22 +509,67 @@ class RoadmapReadServiceTest {
         // then
         assertThatThrownBy(
                 () -> roadmapService.findRoadmapGoalRoomsByFilterType(1L,
-                        RoadmapGoalRoomsFilterTypeDto.LATEST, new CustomScrollRequest(null, null, null, null, 10)))
+                        RoadmapGoalRoomsFilterTypeDto.LATEST, new CustomScrollRequest(null, 10)))
                 .isInstanceOf(NotFoundException.class)
                 .hasMessageContaining("존재하지 않는 로드맵입니다. roadmapId = 1");
     }
 
-    private Member 사용자를_생성한다() {
-        final MemberProfile memberProfile = new MemberProfile(Gender.MALE, LocalDate.of(1995, 9, 30), "010-0000-0000");
+    @Test
+    void 로드맵의_리뷰_목록을_최신순으로_조회한다() {
+        // given
+        final Member member1 = 사용자를_생성한다(1L, "identifier1", "리뷰어1");
+        final Member member2 = 사용자를_생성한다(2L, "identifier2", "리뷰어2");
+        final RoadmapNode roadmapNode1 = new RoadmapNode("로드맵 1주차", "로드맵 1주차 내용");
+        final RoadmapNode roadmapNode2 = new RoadmapNode("로드맵 2주차", "로드맵 2주차 내용");
+        final RoadmapNodes roadmapNodes = new RoadmapNodes(List.of(roadmapNode1, roadmapNode2));
+        final RoadmapContent roadmapContent = new RoadmapContent("로드맵 본문");
+        roadmapContent.addNodes(roadmapNodes);
+        final Roadmap roadmap = new Roadmap(1L, "로드맵 제목", "로드맵 설명", 100, RoadmapDifficulty.DIFFICULT, member1,
+                new RoadmapCategory("it"));
 
-        return new Member(1L, new Identifier("identifier1"), new EncryptedPassword(new Password("password1!")),
-                new Nickname("썬샷"), null, memberProfile);
+        final RoadmapReview roadmapReview1 = new RoadmapReview("리뷰 내용", 5.0, member1);
+        final RoadmapReview roadmapReview2 = new RoadmapReview("리뷰 내용", 4.5, member2);
+        roadmapReview1.updateRoadmap(roadmap);
+        roadmapReview2.updateRoadmap(roadmap);
+
+        when(roadmapRepository.findRoadmapById(anyLong())).thenReturn(Optional.of(roadmap));
+        when(roadmapReviewRepository.findRoadmapReviewWithMemberByRoadmapOrderByLatest(any(), any(), anyInt()))
+                .thenReturn(List.of(roadmapReview2, roadmapReview1));
+
+        // when
+        final List<RoadmapReviewResponse> response = roadmapService.findRoadmapReviews(1L,
+                new CustomScrollRequest(null, 10));
+
+        final List<RoadmapReviewResponse> expect = List.of(
+                new RoadmapReviewResponse(2L, new MemberResponse(2L, "리뷰어2", "default-member-image"),
+                        LocalDateTime.now(), "리뷰 내용", 4.5),
+                new RoadmapReviewResponse(1L, new MemberResponse(1L, "리뷰어1", "default-member-image"),
+                        LocalDateTime.now(), "리뷰 내용", 5.0));
+
+        // then
+        assertThat(response)
+                .usingRecursiveComparison()
+                .ignoringFields("id", "member.imageUrl", "createdAt")
+                .isEqualTo(expect);
     }
 
-    private Member 사용자를_생성한다(final Long id) {
-        return new Member(id, new Identifier("identifier1"),
-                new EncryptedPassword(new Password("password1")), new Nickname("name1"),
-                new MemberImage("originalFileName", "default-member-image", ImageContentType.JPG),
+    @Test
+    void 로드맵_리뷰_조회_시_유효하지_않은_로드맵_아이디라면_예외를_반환한다() {
+        // given
+        when(roadmapRepository.findRoadmapById(anyLong()))
+                .thenThrow(new NotFoundException("존재하지 않는 로드맵입니다. roadmapId = 1"));
+
+        // when, then
+        assertThatThrownBy(() -> roadmapService.findRoadmapReviews(1L, new CustomScrollRequest(null, 2)))
+                .isInstanceOf(NotFoundException.class)
+                .hasMessageContaining("존재하지 않는 로드맵입니다. roadmapId = 1");
+    }
+
+    private Member 사용자를_생성한다(final Long id, final String identifier, final String nickname) {
+        return new Member(id, new Identifier(identifier),
+                new EncryptedPassword(new Password("password1!")),
+                new Nickname(nickname),
+                new MemberImage("originalFileName", "default-profile-image", ImageContentType.JPG),
                 new MemberProfile(Gender.FEMALE, LocalDate.of(2000, 7, 20), "010-1111-1111"));
     }
 
